--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 ### DATABASE ###
-
 spring.datasource.url=jdbc:mysql://localhost:3306/EBankdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
 ### JPA / HIBERNATE ###
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+### we use MySQL as a DB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+### to add colour to log levels
+spring.output.ansi.enabled=always
+### to specify running port 
+server.port=8082
